# HomeAssistant-RFID

./: CMakeLists.txt  partitions.csv  set_IDF_PATH.bat
.cache/clangd/index/: DFPlayerMiniFast.c.8D8DC7ACF44643BD.idx  DFPlayerMiniFast.h.814C42FC74D2B980.idx  VL53L1X_api.c.D9413CD5DD2A7EB7.idx  VL53L1X_api.h.E5494FE83DACD127.idx  VL53L1X_calibration.c.8B917661822C3760.idx  VL53L1X_calibration.h.CB93160E8785B4D1.idx  VL53L1X_error_codes.h.4E1A37492D558479.idx  (+59 more)
Doc/Collegamenti/: info.docx  ~$info.docx
Doc/ESp32-S2 WROVER/: info.txt
Doc/RC522/: info.txt
components/DFPlayerMiniFast/: CMakeLists.txt
components/DFPlayerMiniFast/examples/: Test.c
components/DFPlayerMiniFast/include/: DFPlayerMiniFast.h
components/DFPlayerMiniFast/src/: CMakeLists.txt  DFPlayerMiniFast.c
components/VL53L1/: CMakeLists.txt
components/VL53L1/examples/: main-gpio-interrupt.c  main-hires-timer.c
components/VL53L1/include/platform/: i2c_platform_esp.h  vl53l1_platform.h
components/VL53L1/include/public/: VL53L1X_api.h
components/VL53L1/src/core/: CMakeLists.txt  VL53L1X_api.c  VL53L1X_calibration.c
components/VL53L1/src/platform/: CMakeLists.txt  gpio_platform_esp.c  i2c_platform_esp.c  vl53l1_platform.c
main/: CMakeLists.txt  Kconfig.projbuild  captive_portal.c  config.c  dns_server.c  idf_component.yml  led_manager.c  main.c  mqtt_manager.c  mqtt_topics.c  rfid_manager.c  webserver.c  wifi_manager.c
main/include/: captive_portal.h  config.h  dns_server.h  led_manager.h  mqtt_manager.h  mqtt_topics.h  rfid_manager.h  webserver.h  wifi_manager.h
(+1 files in other folders)
